...

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/rlSearchBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_search_bar"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_marginBottom="@dimen/margin_medium_2"
...
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        app:srcCompat="@drawable/ic_baseline_search_24dp_black" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/icSearch"
                        android:background="@null"
                        android:hint="Search Play Books" />
...
