...
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        app:cornerRadius="10dp"
                        app:srcCompat="@drawable/book"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvBookTitleDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ivBookDetail"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:textSize="@dimen/text_regular_2x"
...
