...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/rvBannerBook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_carousel_banner_book"
                android:layout_marginTop="@dimen/margin_medium_2" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutBook"
...
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/colorAccent"
                app:tabTextAppearance="@style/TabTextAppearance"
                app:tabTextColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBookCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabLayoutBook"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_xxlarge" />
...
