...
            android:layout_below="@id/ivViewAs"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_xxlarge"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSmallGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivViewAs"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_xxlarge"/>
...
