...
        android:scaleType="centerCrop"
        app:cornerRadius="10dp"
        android:layout_marginStart="@dimen/margin_medium_2"
        app:srcCompat="@drawable/placeholder_book"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShelfTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivShelf"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:text="Action"
        android:textStyle="bold"
...
        android:layout_below="@id/tvShelfTitle"
        android:layout_alignStart="@id/tvShelfTitle"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="2 Books"/>

    <CheckBox
        android:id="@+id/cbAddToShelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

...
