...
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_centerVertical="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreateShelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivCreateShelf"
            android:text="Create new"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
...
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShelf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="64dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
