...
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_outline_create_24dp_white"
                app:tint="@color/black"
                android:layout_marginEnd="@dimen/margin_xlarge"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRenameShelf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Rename shelf"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/black"/>

...
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/delete"
                android:layout_marginEnd="@dimen/margin_xlarge"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDeleteShelf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Delete shelf"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/black"/>

...
